--- a/redis-session-share/src/main/resources/application.yml
+++ b/redis-session-share/src/main/resources/application.yml
@@ -4,13 +4,13 @@
  #redis配置
  spring:
     redis:
-      host: 203.195.160.69
+      host: 127.0.0.1
       port: 6379
       # REDIS (RedisProperties)
       # Redis数据库索引（默认为0）
       database: 0
       # Redis服务器连接密码（默认为空）
-      password: Zy$13600199290
+      password:
       # 连接池最大连接数（使用负值表示没有限制）
       # 连接超时时间（毫秒）
       timeout: 0
